--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     tools:context="com.conradcrates.curvetechnicalchallenge.MainActivity">
 
     <ScrollView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <LinearLayout
@@ -18,7 +18,8 @@
                 android:id="@+id/layout_grid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="2" />
+                android:columnCount="2"
+                />
 
             <TextView
                 android:id="@+id/text_sum"
