--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,13 +18,13 @@
                 android:id="@+id/layout_grid"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:columnCount="2"
-                />
+                android:columnCount="2" />
 
             <TextView
                 android:id="@+id/text_sum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="text"
                 android:layout_gravity="center_horizontal"/>
         </LinearLayout>
     </ScrollView>
