--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,7 @@
                 android:id="@+id/text_sum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="text"
-                android:layout_gravity="center_horizontal"/>
+                android:layout_marginTop="20dp"/>
         </LinearLayout>
     </ScrollView>
 
